dpndnc's for prism and service add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Blogpost",
         "blogposts",
-        "codepulse"
+        "codepulse",
+        "okaidia",
+        "prismjs"
     ]
 }
