inject dbcontext and auth changes

--- a/CodePulse.API/appsettings.json
+++ b/CodePulse.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CodePulseConnectionString": "Server=ADAMDELLLAPTOP\\MSSQLSERVER2;Database=CodePulseDb;TrustServerCertificate=True;Trusted_Connection=True"
+  },
+  "Jwt": {
+    "Key": "lsamelsdjfspdjf",
+    "Issuer": "https://localhost:7196",
+    "Audience": "https://localhost:4200"
   }
 }
