create jwt token

--- a/CodePulse.API/appsettings.json
+++ b/CodePulse.API/appsettings.json
@@ -10,7 +10,7 @@
     "CodePulseConnectionString": "Server=ADAMDELLLAPTOP\\MSSQLSERVER2;Database=CodePulseDb;TrustServerCertificate=True;Trusted_Connection=True"
   },
   "Jwt": {
-    "Key": "lsamelsdjfspdjf",
+    "Key": "JAyzwQ9LT9ExCnvbWQk1abzPdQYPp3US",
     "Issuer": "https://localhost:7196",
     "Audience": "https://localhost:4200"
   }
