--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@types/marked": "^6.0.0",
     "g": "^2.0.1",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^17.1.0",
     "ngx-markdown": "^16.0.0",
     "rxjs": "~7.8.0",
